--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,14 @@
 .App {
   text-align: center;
+  background-color: #3CBC8D;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
+/* 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
+} */
 
 .App-header {
   background-color: #282c34;
@@ -28,6 +25,7 @@
   color: #61dafb;
 }
 
+/* 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +33,48 @@
   to {
     transform: rotate(360deg);
   }
+} */
+body {
+  cursor: url('https://bricampgomez.com/assets/img/batboy-50.png') 25 25,auto;
 }
+
+/* email input boxes design */
+input[type=text] {
+  width: 130px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: #3CBC8D;
+  /* background-image: url('https://img.icons8.com/pastel-glyph/64/000000/search--v6.png'); */
+  background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 40px;
+  transition: width 0.4s ease-in-out;
+}
+
+input[type=text]:focus {
+  width: 100%;
+}
+
+
+/* password input boxes design */
+input[type=password] {
+  width: 130px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+  background-color: #3CBC8D;
+  /* background-image: url('<img src="https://img.icons8.com/ios-glyphs/30/000000/private-lock.png"/>'); */
+  background-position: 10px 10px; 
+  background-repeat: no-repeat;
+  padding: 12px 20px 12px 40px;
+  transition: width 0.4s ease-in-out;
+}
+
+input[type=password]:focus {
+  width: 100%;
+}
+
+/* <img src="https://img.icons8.com/pastel-glyph/64/000000/search--v2.png"/> */
