--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .App {
   text-align: center;
   background-color: #3CBC8D;
@@ -34,10 +40,16 @@
     transform: rotate(360deg);
   }
 } */
+
+
 body {
+  /* font-family: 'Poppins'; */
+  background: rgb(177, 170, 170);
   cursor: url('https://bricampgomez.com/assets/img/batboy-50.png') 25 25,auto;
 }
-
+ul {
+  list-style: none;
+}
 
 /* NAVBAR DESIGN */
 .navbar {
@@ -82,6 +94,14 @@ body {
 /* loading feature when hovering over submit buttons */
 .wait {cursor: wait;}
 
+form {
+  border-radius: 5px;
+  background-color: #f2f2f243;
+  padding: 20px;
+  margin: 10px 0;
+}
+
+
 /* email input boxes design */
 input[type=text] {
   width: 130px;
@@ -93,6 +113,7 @@ input[type=text] {
   background-image: url('https://img.icons8.com/nolan/30/email.png');
   background-position: 6px 6px; 
   background-repeat: no-repeat;
+  margin: 8px 0;
   padding: 12px 20px 12px 40px;
   transition: width 0.4s ease-in-out;
 }
@@ -122,4 +143,28 @@ input[type=password]:focus {
 }
 
 
+
+
+/* OVERLAY for later =========================== */
+/* .overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0%;
+  z-index: 99;
+}
+
+.first {
+  background: #efde74;
+}
+
+.second {
+  background: #efde74;
+  left: 33.3%;
+}
+
+.third {
+  background: #efde74;
+  left: 66.6%;
+} */
 
